nlw/share/skin/s3/css/screen.css
/* ... */
body#dashBoard .widget.regular .widgetHeader {
    cursor: move;
}

body#dashBoard .widget.tan .widgetHeader,
body#dashBoard .widget.gray .widgetHeader {
    cursor: default;
}

body#dashBoard .widget.gray .widgetHeader h4 {
    color: #ABC1E2 !important;
}

body#dashBoard .hidden {
    display: none; 
}

body#dashBoard #st-editing-tools-edit img.avatar {
    margin-top: 9px;
}

body#dashBoard #st-editing-tools-edit span {
    position: relative;
    font-size: 150%;
    top: -7px;
}

body#dashBoard div#controls div#controlsRight {
    width: auto !important;
}

body#dashBoard div#controls div#controlsRight ul {
    margin-top: 11px;
}

.container #col0 {
    padding-right: 1%;
}
.container #col1 {
    padding-right: 1%;
}

.container .formButtons {
    width: 100%;
    clear: both;
}
.container .flexButtonBlue {
    float: right;
    margin: 4px;
}

.widget.borderless .widgetHeader {
    display: none;
}

.widget.borderless {
    background: none !important;
    border-left: none !important;
    padding: 0 !important;
    margin: 10px 0 0 !important;
}

.widget.borderless div.widget,
.widget.borderless div.widgetContent,
.widget.borderless div.widgetBottom,
.widget.borderless div.widgetBottomRight {
    background: none !important;
    border-left: none !important;
    padding: 0 !important;
    margin: 0 !important;
}
/* End of Container stuff */

/* Search Results */

#tooManyResults {
  margin:1em 0 4em 0;
}

/* Gadget Gallery */
.galleryTitle {
    font-weight: bold;
    border-bottom: 1px solid black;
    width: 50%;
    float: left;
    padding: 10px 0 5px 0;
    font-size: 10pt;
}

.galleryTitle span {
    margin-left: 140px;
}

.gallerySection {
    width: 50%;
    float: left;
}

.galleryWidget {
    margin: 10px 0 20px 0;
}

.galleryWidget .thumbnail {
    width: 120px;
    height: 60px;
    float: left;
    margin: 0 10px;
}

.galleryWidget .title {
    font-weight: bold;
}

.galleryWidget .description {
    padding: 5px 0;
}

.galleryWidget .description,
.galleryWidget .widgetButton {
    margin-left: 140px;
}

.galleryWidget.removed {
    opacity: .5;
    filter: alpha(opacity = 50);
}

.avatarPopup {
    position: absolute;
    display: none;
    font-size: 90%;
    z-index: 1000;
    -width: 300px;
}

.avatarPopup .top, .avatarPopup .bottom {
    height: 19px;
    width: 100%;
}

.avatarPopup .fn {
    font-weight: bold;
}

.avatarPopup .inner {
    background: #FFF;
    border: 1px solid black;
    padding: 6px;
    text-align: left;
    float: left;
}

.avatarPopup .inner .vcard {
    min-height: 62px;
}

.avatarPopup img.avatarPhoto {
    float: left;
    padding: 5px;
}

.avatarPopup .userinfo {
    margin-left: 72px;
}

.avatarPopup .userinfo.web {
    display: none; /* not a requirement to show web stuff in the popup */
}

.avatarPopup .vcard .photo {
    float: left;
}

.avatarPopup .userinfo img {
    vertical-align: middle !important;
}

.avatarPopup ul {
    list-style-type: none !important;
    padding-left: 0;
    margin-left: 0;
}

.avatarPopup .follow {
    text-align: left;
    border-top: 1px solid #CCCBCC;
    margin-top: 5px;
    padding: 5px;
    height: 13px;
}

.avatarPopup .followPersonButton,
.avatarPopup .followPersonButton:hover {
    color: #000;
    text-decoration: none;
    height: 18px;
    float: left;
}

/* logic for showing the avatar popup under the avatar */
.avatarPopup .top {
    display: none;
}
.avatarPopup .inner {
    border-bottom: none;
}

.avatarPopup.underneath .top {
    display: block;
}
.avatarPopup.underneath .bottom {
    display: none;
}
.avatarPopup.underneath .inner {
    border-bottom: 1px solid black;
    border-top: none;
}

table.st-ss th span {
    display: none !important;
}

.groupsTitle,
.exploreTitle {
    position: static;
    margin-top: 18px;
    margin-left: 5px;
}

.exploreTitle .prefix,
.groupsTitle .prefix {
    background:#999;
    color:#fff;
    text-transform: uppercase;
    margin-right:1em;
    font-size: 10pt;
    padding: 1px 5px;
}

body#dashBoard #st-editing-tools-edit span.help,
body#dashBoard #st-editing-tools-edit span.prefix {
    font-size: 100%;
    top: -9px;
}

#createGroupButtons {
    height: 30px;
    width: 98%;
    padding-top: 10px;
    text-align: right;
}

#createGroupButtons .spinner {
    margin-right: 70px;
    margin-top: 6px;
}

.red_error { color: #e22 }

/*
 * Dropdowns
 */
ul#network-list, ul#signal_network-list {
    width: 150px;
}

ul.dropdownOptions {
    position: absolute;
    display: none;
    z-index: 3500; /* above the signalthis iframe */
    display: block;
    background-color: #FFF;
    padding: 0;
    margin: 0;
    text-align: left;
    width: 100px;
    border: 1px solid black;
    border-top: none;
}
ul.dropdownOptions li {
    display: block;
    list-style: none;
    margin: 0;
    padding: 3px;
    border-top: 1px solid black;
    overflow: hidden;
}

ul.dropdownOptions a {
    color: #0E93D8;
    white-space: nowrap;

    /* Styles that are inherited in widgets: */
    font-size: 11px;
    font-family: arial, helvetica, sans-serif;
}

/* Hovered option */
ul.dropdownOptions li:hover, ul.dropdownOptions li.hover {
    background-color: #F4F0CB;
}
ul.dropdownOptions li:hover a, ul.dropdownOptions li.hover a {
    text-decoration: underline;
}

/* Selected option */
ul.dropdownOptions li.selected {
    background-color: #F4F0CB;
}

/* Disabled option */
ul.dropdownOptions li.disabled {
    background-color: #FFF;
}

/* Disabled option's link */
ul.dropdownOptions li.disabled a {
    color: #CCC;
    cursor: default;
    text-decoration: none;
}

ul.dropdownOptions li.disabled a:hover {
    text-decoration: none;
}

/* Activities widget popups */
.attachmentPopup, .weblinkPopup, .wikilinkPopup {
    position: absolute;
    background-color: #fff;
    z-index: 1000;
    margin: 1px 5% 0px 5%;
    padding: 5px;
    text-align: left;
    border: 1px solid black;
}
/* ... */

